Fix button not visible. Now displays button for adding plants in the upper right corner.

--- a/pakkun/app/assets/stylesheets/home_page.scss
+++ b/pakkun/app/assets/stylesheets/home_page.scss
@@ -28,13 +28,14 @@ body {
 	height: 500px;
 }
 
-.map-ui {
+#map-ui {
   background: #fff;
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 0;
+  z-index: 1;
+  border: 1px solid #999;
   border-radius: 3px;
-  width: 120px;
-  border: 1px solid rgba(0,0,0,0.4);
+  border-color: rgba(0,0,0,.4);
+  box-shadow: none;
 }
